# internal/comment/routes.go
@@ -5,10 +5,10 @@ import (
 )
 
 func Routes(r *gin.RouterGroup, h *handler, authMiddleware gin.HandlerFunc) {
-	posts := r.Group("/posts/:post_id/comments")
+	posts := r.Group("/posts/:id/comments")
 	posts.GET("", h.List)
 	protected := posts.Group("", authMiddleware)
 	protected.POST("", h.Create)
-	protected.PUT("/:id", h.Update)
-	protected.DELETE("/:id", h.Delete)
+	protected.PUT("/:comment_id", h.Update)
+	protected.DELETE("/:comment_id", h.Delete)
 }
